# CCPU-emulator

./: .gitignore  .readme.md.swp  CMakeLists.txt  readme.md
examples/: ccpu-assembly.casm  example.cexe  helloworld.cexe  infinite-loop.cexe  input-example.cexe  print-example.cexe  stack-example.cexe
src/: input.h  main.c
src2.0/: input.c  main.c
